# halo2traits

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/examples/: ff.rs
derive/src/: binops.rs  lib.rs
derive/src/ff/: arith.rs  mod.rs  repr.rs
traits/: Cargo.toml
traits/src/ff/: mod.rs  repr.rs  utils.rs
traits/src/ff/arithmetic/: inverse.rs  mod.rs  sqrt.rs  u64.rs
