[package]
edition = "2021"
name = "halo2derive"
version = "0.1.0"

[dependencies]
halo2traits = {path = "../traits"}
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[dev-dependencies]
rand_core = {version = "0.6", default-features = false}
subtle = {version = "2.2.1", default-features = false, features = ["i128"]}

[lib]
proc-macro = true
