[package]
edition = "2021"
name = "halo2traits"
version = "0.1.0"

[dependencies]
rand_core = {version = "0.6", default-features = false}
subtle = {version = "2.2.1", default-features = false, features = ["i128"]}

num-bigint = {version = "0.4", features = ["rand"], optional = true}
num-integer = {version = "0.1", optional = true}
num-traits = {version = "0.2", optional = true}

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"

[features]
default = ["big"]

big = ["num-bigint", "num-integer", "num-traits"]
